--- a/myFirstIonicApp/src/app/home/home.page.html
+++ b/myFirstIonicApp/src/app/home/home.page.html
@@ -9,12 +9,28 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          1 of 2
+        </ion-col>
+        <ion-col>
+          1 of 2
+        </ion-col>
+        <ion-col>
+          1 of 2
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          1 of 2
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
