--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,38 +1,4 @@
-#container {
+ion-title{
   text-align: center;
-  margin-top: 15vh;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
-ion-col {
-  background: rgba(157, 157, 255, 0.034);
-  border: .1rem solid rgba(49, 49, 49, 0.103);
-  padding: 1rem;
-
-  border-radius: .5rem;
-}
-ion-row{
-  margin:0 .5rem ;
-}
